--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./lightbox2-dev/dist/js/lightbox.min.js"></script>
-    <script src="/js/main.js"></script>
     <script src="js/slick.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./js/main.js"></script>
+  
 </body>
 
 </html>
