--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <h2 class="about__heading">Nasze domki</h2>
             <p class="about__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             <div class="houses">
-
-                <div class="houses__house houses__house--one" data-aos="fade-right" data-aos-delay="400"
-                    data-aos-once="true">
+                <!-- data-aos="fade-right" data-aos-delay="400"
+                data-aos-once="true" -->
+                <div class="houses__house houses__house--one">
                     <button><i class="far fa-question-circle"></i></button>
                     <div class="text">
                         <h1>Domek Julka</h1>
@@ -81,8 +81,9 @@
                             quaerat, eligendi debitis quasi, perferendis doloribus.</p>
                     </div>
                 </div>
-                <div class="houses__house houses__house--two" data-aos="fade-left" data-aos-delay="400"
-                    data-aos-once="true">
+                <!-- data-aos="fade-left" data-aos-delay="400"
+                    data-aos-once="true" -->
+                <div class="houses__house houses__house--two">
                     <button><i class="far fa-question-circle"></i></button>
                     <div class="text">
                         <h1>Domek Kuba</h1>
