--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <nav class="navbar">
-        <a href="#" class="navbar__logo"><img src="./img/lesny_zakatek_logo_navbar.png"></a>
+        <a href="#" class="navbar__logo"><img src="./img/lesny_zakatek_logo_navbar.png" alt="Logo"></a>
         <div class="navbar__menu">
             <a href="#aboutus" class="navbar__menu--links">o nas</a>
             <a href="#house" class="navbar__menu--links">Domki</a>
@@ -40,7 +40,7 @@
         <div class="header__img"></div>
         <h1 class="header__heading" data-aos="fade-up" data-aos-delay="400">Leśny Zakątek</h1>
         <p class="header__text" data-aos="fade-up" data-aos-delay="600">Wyjątkowe domki w centrum natury.</p>
-        <a href="#offers" class="header__btn" data-aos="fade-up" data-aos-delay="800">Nasze domki</a>
+        <a href="#house" class="header__btn" data-aos="fade-up" data-aos-delay="800">Nasze domki</a>
     </header>
 
     <section id="aboutus" class="about section-padding section">
