--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- data-aos="fade-right" data-aos-delay="400"
                 data-aos-once="true" -->
                 <div class="houses__house houses__house--one">
-                    <button><i class="far fa-question-circle"></i></button>
+                    <button aria-label=“więcej informacji”><i class="far fa-question-circle"></i></button>
                     <div class="text">
                         <h1>Domek Julka</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laudantium alias provident
@@ -84,7 +84,7 @@
                 <!-- data-aos="fade-left" data-aos-delay="400"
                     data-aos-once="true" -->
                 <div class="houses__house houses__house--two">
-                    <button><i class="far fa-question-circle"></i></button>
+                    <button aria-label=“więcej informacji”><i class="far fa-question-circle"></i></button>
                     <div class="text">
                         <h1>Domek Kuba</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi laudantium alias provident
